CSS fix; Wrap <pre> tags.

--- a/style.css
+++ b/style.css
@@ -592,3 +592,11 @@ blockquote {
 
 .corner-ribbon.red{background: #e43;}
 
+pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
